# TerraAus-Core

./: .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac
.github/workflows/: dev-cpp.yml
build-aux/m4/: bitcoin_qt.m4  taustraliacash_find_bdb53.m4
contrib/: README.md  australiacashd.bash-completion  gitian-build.sh  install_db5.sh
contrib/debian/: README.md  australiacash-qt.manpages  australiacash-tx.bash-completion  australiacash-tx.manpages  australiacashd.bash-completion  australiacashd.examples  control  rules  taustraliacash-qt.desktop  taustraliacash-qt.install  taustraliacash-qt.lintian-overrides  taustraliacash-qt.protocol  taustraliacash-tx.install  taustraliacashd.install  taustraliacashd.lintian-overrides  taustraliacashd.manpages  watch
contrib/devtools/: check-translations.py  gen-manpages.sh
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  australiacashd.opt.service  org.australiacash.australiacashd.plist  taustraliacashd.conf  taustraliacashd.init  taustraliacashd.local.service  taustraliacashd.openrc  taustraliacashd.openrcconf  taustraliacashd.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md
contrib/rpm/: bitcoin.spec
contrib/snap/: README.md  snapcraft.yaml
contrib/testgen/: gen_base58_test_vectors.py
contrib/verify-commits/: pre-push-hook.sh
depends/: funcs.mk
doc/: Building-AustraliaCash-1.14-for-Mac.md  Doxyfile  FAQ.md  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-archlinux.md  build-nixos.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  fee-recommendation.md  files.md  fuzzing.md  getting-started.md  gitian-building.md  init.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: Makefile.am  australiacash-cli.1  taustraliacash-qt.1  taustraliacash-tx.1  taustraliacashd.1
doc/release-notes/: RELEASE_NOTES_1.8.2.md  RELEASE_NOTES_1.8.3.md  RELEASE_NOTES_1_8.1.md  release-notes-1.14.2.md  release-notes-1.14.3.md  release-notes-1.14.4.md  release-notes-1.14.5.md  release-notes-1.7.0.md  (+1 more)
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.cpp  amount.h  australiacash-fees.h  australiacash.cpp  auxpow.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  clientversion.h  hash.cpp  httpserver.cpp  init.cpp  key.cpp  miner.cpp  miner.h  net.cpp  net.h  net_processing.cpp  net_processing.h  netaddress.cpp  netaddress.h  netbase.cpp  netbase.h  pow.cpp  protocol.cpp  protocol.h  pubkey.cpp  pubkey.h  rest.cpp  scheduler.cpp  (+16 more)
src/compat/: arm_acle_selector.h  glibc_compat.cpp
src/consensus/: consensus.h  params.h
src/crypto/: hmac_sha256.h  scrypt-sse2.cpp  scrypt.cpp  sha1.cpp  sha256.cpp  sha512.cpp
src/leveldb/: LICENSE
src/policy/: policy.cpp  policy.h
src/primitives/: pureheader.h  transaction.h
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  importkeysdialog.cpp  importkeysdialog.h  intro.cpp  modaloverlay.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentserver.cpp  peerdialog.cpp  peerdialog.h  peertablemodel.cpp  peertablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  splashscreen.cpp  trafficgraphwidget.cpp  (+13 more)
src/qt/forms/: intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_et_EE.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  (+42 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: australiacash.icns
src/qt/test/: paymentservertests.cpp  rpcnestedtests.cpp  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/secp256k1/: Makefile.am  configure.ac
src/secp256k1/src/: ecdsa_impl.h  ecmult_impl.h  group_impl.h  scalar.h  scalar_impl.h  scalar_low_impl.h  tests_exhaustive.c
src/support/: lockedpool.cpp
src/test/: amount_tests.cpp  australiacash_tests.cpp  auxpow_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  net_tests.cpp  netbase_tests.cpp  pow_tests.cpp  rpc_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  txvalidationcache_tests.cpp  versionbits_tests.cpp
src/test/data/: bitcoin-util-test.json
src/wallet/: coincontrol.h  rpcdump.cpp  rpcutil.cpp  rpcutil.h  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqpublishnotifier.cpp
(+58 files in other folders)
